☄️🌪 Updated with Glitch

--- a/public/burndown.html
+++ b/public/burndown.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="wrappper">
+  <div id="wrapper">
     <div id="burndown_chart" style="width:700px;height:400px;"></div>
     <div class="dashboard">
       <div class="row">
